# JetBrains-Tasks

./: CMakeLists.txt  README.md  main.cpp
include/: OpenGLEnvironment.hpp  SDLEnvironment.hpp  SearcherEngine.hpp
src/: OpenGLEnvironment.cpp  SDLEnvironment.cpp  SearcherEngine.cpp  main.cpp
